# maskmail

./: README.md  go.mod  main.go  maskmail.py  mypy.ini  pyproject.toml
